--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
+    "@types/lodash": "^4.14.184",
     "@types/styled-components": "^5.1.26"
   }
 }
